# discrete1

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  FSproblems.py  INPUT.md  KEproblems.py  LICENSE  README.html  README.ipynb  README.md  README.txt  __init__.py  ae_data_collection.py  ae_prob.py  benchmarks.py  cfunctions.os  chemistry.py  correct.py  critical.py  data_collection_1d.py  dj_prob.py  drDjinn.py  element_dictionary.json  fixed.py  generate.py  hist_layer.txt  hoth.py  hybrid.py  initialize.py  keigenvalue.py  layers.py  paper_graphing.py  phi2_05.npy  plastic.py  pyproject.toml  pytest.ini  reduction.py  rogue.py  setup.cfg  (+13 more)
data/: .__afs0737  autoencode.c  cCritical.c  cCriticalSP.c  cHybrid.c  cHybridSP.c  cSource.c  cSourceSP.c  cfunctions.c  compound_density.json  element_dictionary.txt  initial_ss440.npy  input_script_critical.json  input_script_source.json  isotope_abundance.json  left_psis.npy  neutron_speed.npy  phi_carbon_mixed1.npy  phi_carbon_source.npy  phi_group_012.npy  phi_group_070.npy  phi_mixed1.npy  phi_mp_15.npy  phi_multiplastic_15.npy  phi_orig_15.npy  phi_ss_15.npy  phi_ss_flip_15.npy  right_psis.npy  xs2multDJ.json
discrete1/: __init__.py  benchmarks.py  boundary1d.py  chemistry.py  constants.py  construction.py  cram.py  critical.py  critical0d.py  critical1d.py  criticality.py  djinn1d.py  external1d.py  fixed.py  fixed1d.py  generate.py  hybrid.py  hybrid1d.py  keigenvalue.py  main.py  materials.py  multi_group.py  multi_group_0d.py  reduction.py  (+10 more)
discrete1.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+177 files in other folders)
